@@ -1,5 +1,8 @@
 
-Warning: silly arg (-1) to realloc()
+Argument 'size' of function realloc has a fishy (possibly negative) value: -1
+   at 0x........: realloc (vg_replace_malloc.c:...)
+   by 0x........: main (accounting.c:17)
+
 
 HEAP SUMMARY:
     in use at exit: 0 bytes in 0 blocks
@@ -8,4 +11,4 @@ HEAP SUMMARY:
 For a detailed leak analysis, rerun with: --leak-check=full
 
 For counts of detected and suppressed errors, rerun with: -v
-ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)
+ERROR SUMMARY: 1 errors from 1 contexts (suppressed: 0 from 0)
